# airbyte-source-zuora

./: .dockerignore  .gitignore  Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
.github/workflows/: build-and-publish.yml
docs/superpowers/plans/: 2026-07-21-zuora-cdk7-modernization.md  2026-07-21-zuora-client-hardening.md
docs/superpowers/specs/: 2026-07-21-zuora-cdk7-modernization-design.md
source_zuora/: source.py  spec.json  zuora_auth.py  zuora_client.py  zuora_endpoint.py  zuora_errors.py  zuora_excluded_streams.py
unit_tests/: conftest.py  test_auth.py  test_client.py  test_endpoint.py  test_errors.py  test_source.py
