[tool.poetry]
name = "airbyte-source-zuora"
version = "0.2.1"
description = "Airbyte source connector for Zuora."
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "source_zuora" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
airbyte-cdk = "^7.23"
pendulum = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
requests-mock = "*"
pytest-mock = "*"

[tool.poetry.scripts]
source-zuora = "source_zuora.run:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
